# shop

./: .gitignore  Makefile  README.md  pyproject.toml
shop/: settings.py  urls.py
shop/products/: admin.py  models.py  serializers.py  urls.py  views.py
shop/products/migrations/: 0001_initial.py
